--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@html-eslint/eslint-plugin": "^0.47.0",
     "@tailwindcss/vite": "^4.1.13",
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.25",
     "hls.js": "^1.6.13",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
-    "typescript-eslint": "^8.44.1",
-    "vite-plugin-eslint": "^1.8.1",
-    "vite-plugin-pages": "^0.33.1"
+    "typescript-eslint": "^8.44.1"
   },
   "devDependencies": {
     "typescript": "~5.8.3",
