--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "autoprefixer": "^10.4.21",
     "daisyui": "^5.1.25",
     "hls.js": "^1.6.13",
+    "iconify-icon": "^3.0.1",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript-eslint": "^8.44.1"
   },
   "devDependencies": {
+    "@iconify/json": "^2.2.392",
+    "@tomjs/vite-plugin-iconify": "^1.2.1",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
   }
