--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "daisyui": "^5.1.25",
     "hls.js": "^1.6.13",
     "iconify-icon": "^3.0.1",
+    "libass-wasm": "^4.1.0",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript-eslint": "^8.44.1"
