--- a/package.json
+++ b/package.json
@@ -16,12 +16,19 @@
     "iconify-icon": "^3.0.1",
     "libass-wasm": "^4.1.0",
     "postcss": "^8.5.6",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.3",
     "tailwindcss": "^4.1.13",
     "typescript-eslint": "^8.44.1"
   },
   "devDependencies": {
     "@iconify/json": "^2.2.392",
+    "@iconify/react": "^6.0.2",
     "@tomjs/vite-plugin-iconify": "^1.2.1",
+    "@types/react": "^19.2.2",
+    "@types/react-dom": "^19.2.1",
+    "@vitejs/plugin-react": "^5.0.4",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
   }
