--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
+    "react-router": "^7.9.4",
     "typescript": "~5.8.3",
     "vite": "^7.1.7"
   }
